[gd_scene load_steps=2 format=2]

[ext_resource path="res://gamemode/Murder.gd" type="Script" id=1]

[node name="Murder" type="Node"]

script = ExtResource( 1 )

[node name="PickTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[node name="EndTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[connection signal="timeout" from="PickTimer" to="." method="_on_PickTimer_timeout"]

[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]


